--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "cycle-sockets-driver",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Socket.io driver for Cycle.js with support for multiple sockets",
-  "main": "src/makeSocketsDriver.js",
+  "main": "dist/makeSocketsDriver.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard ./src/makeSocketsDriver.js",
+    "dist": "babel src -d dist --presets=es2015,babili --no-babelrc",
+    "prepublish": "npm run dist"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,9 @@
   },
   "homepage": "https://github.com/TimurKiyivinski/cycle-sockets-driver#readme",
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-babili": "0.0.11",
+    "babel-preset-es2015": "^6.22.0",
     "standard": "^8.6.0"
   },
   "dependencies": {
